形態素解析を追加

--- a/kanji-level.html
+++ b/kanji-level.html
@@ -145,7 +145,7 @@
             '4': 7, '3': 8, '準2': 9, '2': 10, '準1': 11, '1': 12
         };
 
-        // 漢字レベルデータ（実際のデータはKANJI_LEVELSから取得）
+        // 漢字レベルデータ
         const KANJI_LEVELS = {
             '10': new Set(['一', '右', '雨', '円', '王', '音', '下', '火', '花', '貝', '学', '気', '休', '玉', '金', '九', '空', '月', '犬', '見', '五', '口', '校', '左', '三', '山', '四', '子', '糸', '字', '耳', '七', '車', '手', '十', '出', '女', '小', '上', '森', '人', '水', '正', '生', '青', '石', '赤', '先', '千', '川', '早', '草', '足', '村', '大', '男', '竹', '中', '虫', '町', '天', '田', '土', '二', '日', '入', '年', '白', '八', '百', '文', '本', '名', '木', '目', '夕', '立', '力', '林', '六']),
             '9': new Set(['引', '羽', '雲', '園', '遠', '黄', '何', '夏', '家', '科', '歌', '画', '会', '回', '海', '絵', '外', '角', '楽', '活', '間', '丸', '岩', '顔', '帰', '汽', '記', '弓', '牛', '魚', '京', '強', '教', '近', '兄', '形', '計', '元', '原', '言', '古', '戸', '午', '後', '語', '交', '光', '公', '工', '広', '考', '行', '高', '合', '国', '黒', '今', '才', '細', '作', '算', '姉', '市', '思', '止', '紙', '寺', '時', '自', '室', '社', '弱', '首', '秋', '週', '春', '書', '少', '場', '色', '食', '心', '新', '親', '図', '数', '星', '晴', '声', '西', '切', '雪', '線', '船', '前', '組', '走', '多', '太', '体', '台', '谷', '知', '地', '池', '茶', '昼', '朝', '長', '鳥', '直', '通', '弟', '店', '点', '電', '冬', '刀', '東', '当', '答', '頭', '同', '道', '読', '内', '南', '肉', '馬', '買', '売', '麦', '半', '番', '父', '風', '分', '聞', '米', '歩', '母', '方', '北', '妹', '毎', '万', '明', '鳴', '毛', '門', '夜', '野', '矢', '友', '曜', '用', '来', '理', '里', '話']),
@@ -163,7 +163,7 @@
 
         let tokenizer = null;
 
-        // Kuromoji.jsの初期化（辞書のパスを修正）
+        // Kuromoji.jsの初期化
         function initializeKuromoji() {
             return new Promise((resolve, reject) => {
                 // kuromojiが正しく読み込まれているか確認
