--- a/pricing-plans.html
+++ b/pricing-plans.html
@@ -188,6 +188,10 @@
             transition: background-color 0.4s;
         }
 
+        .card .btn:hover {
+            background-color: #e9e9e9;
+        }
+
         .card .monthly-btn {
             color: #fff;
             background-color: #3498db;
