footer-logo-section全体をリンク化

--- a/pricing-plans.html
+++ b/pricing-plans.html
@@ -506,10 +506,10 @@
     <footer>
         <div id="footer-container">
             <div class="footer-logo-section">
-                <img src="https://mimneko.github.io/note/assets/icons/android-chrome-192x192.png" alt="MathCompass" class="footer-logo">
-                <p class="company-name">
-                    <a href="https://mimneko.github.io/note/" style="text-decoration: none; color: #333;">みむねこ</a>
-                </p>
+                <a href="https://mimneko.github.io/note/" style="text-decoration: none; color: #333;">
+                    <img src="https://mimneko.github.io/note/assets/icons/android-chrome-192x192.png" alt="MathCompass" class="footer-logo">
+                    <p class="company-name">みむねこ</p>
+                </a>
             </div>
             
             <div class="footer-column">
