プラン内容を考えた

--- a/pricing-plans.html
+++ b/pricing-plans.html
@@ -472,8 +472,7 @@
                     <ul class="features-list">
                         <li>毎日5回まで問題を相談可能</li>
                         <li>基本的なヒントの提供</li>
-                        <li>テキスト形式での解説</li>
-                        <li>中学数学までの対応</li>
+                        <li>過去1年間の相談履歴</li>
                     </ul>
                     <button class="btn">はじめる</button>
                 </div>
@@ -487,10 +486,11 @@
                     <ul class="features-list">
                         <li>無制限の問題相談</li>
                         <li>詳細なステップ解説</li>
-                        <li>数式と図を使った解説</li>
-                        <li>高校数学までの対応</li>
-                        <li>類題のレコメンド</li>
+                        <li>永年の相談履歴</li>
+                        <li>類題の紹介</li>
+                        <li>広告の非表示</li>
                         <li>学習進捗の記録</li>
+                        <li>ユーザの習熟度に合わせた回答の提供</li>
                     </ul>
                     <button class="btn monthly-btn">購入する</button>
                 </div>
@@ -503,11 +503,9 @@
                     </p>
                     <ul class="features-list">
                         <li>Proプランのすべての機能</li>
-                        <li>生徒の利用状況レポート</li>
-                        <li>クラス別の進捗管理</li>
                         <li>教材との連携機能</li>
                         <li>一括アカウント管理</li>
-                        <li>専任サポート担当者</li>
+                        <li>カスタムコンテンツの追加</li>
                     </ul>
                     <button class="btn monthly-btn">購入する</button>
                 </div>
