--- a/pricing-plans.html
+++ b/pricing-plans.html
@@ -435,6 +435,51 @@
                 color: #f5f5f5;
             }
         }
+
+        .pricing-table {
+            margin: 2rem auto;
+            max-width: 900px;
+            overflow-x: auto;
+        }
+
+        .pricing-table table {
+            width: 100%;
+            border-collapse: collapse;
+            background: #fff;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+        }
+
+        .pricing-table th,
+        .pricing-table td {
+            padding: 1rem;
+            text-align: center;
+            border: 1px solid #eee;
+        }
+
+        .pricing-table thead tr:nth-child(1) th {
+            background: #f8f9fa;
+            font-size: 1.2rem;
+            font-weight: bold;
+        }
+
+        .pricing-table thead tr:nth-child(2) td,
+        .pricing-table thead tr:nth-child(3) td {
+            background: #f8f9fa;
+            font-weight: bold;
+        }
+
+        .pricing-table tbody tr:nth-child(even) {
+            background: #fafafa;
+        }
+
+        .pricing-table td:not(:first-child) {
+            color: #666;
+        }
+
+        .pricing-table td:first-child {
+            font-weight: bold;
+            text-align: left;
+        }
     </style>
     <!-- Font Awesome の読み込み -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -511,6 +556,94 @@
                 </div>
             </div>
 
+            <!--
+            <div class="pricing-table" id="pricing-table">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>プラン</th>
+                            <th>Basic</th>
+                            <th>Pro</th>
+                            <th>School</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>対象</td>
+                            <td>おためし</td>
+                            <td>個人向け</td>
+                            <td>20人から</td>
+                        </tr>
+                        <tr>
+                            <td>料金</td>
+                            <td><span class="amount">0円</span></td>
+                            <td><span class="amount">314円</span>/<span class="term">月</span></td>
+                            <td><span class="amount">271円</span>/<span class="term">月</span>/<span class="user">人</span></td>
+                        </tr>
+                        <tr>
+                            <td>問題相談</td>
+                            <td>毎日5回まで</td>
+                            <td>無制限</td>
+                            <td>無制限</td>
+                        </tr>
+                        <tr>
+                            <td>解説内容</td>
+                            <td>基本的なヒント</td>
+                            <td>詳細なステップ解説</td>
+                            <td>詳細なステップ解説</td>
+                        </tr>
+                        <tr>
+                            <td>履歴保持</td>
+                            <td>過去1年間</td>
+                            <td>永年</td>
+                            <td>永年</td>
+                        </tr>
+                        <tr>
+                            <td>類題紹介</td>
+                            <td>―</td>
+                            <td>○</td>
+                            <td>○</td>
+                        </tr>
+                        <tr>
+                            <td>広告表示</td>
+                            <td>あり</td>
+                            <td>なし</td>
+                            <td>なし</td>
+                        </tr>
+                        <tr>
+                            <td>学習進捗記録</td>
+                            <td>―</td>
+                            <td>○</td>
+                            <td>○</td>
+                        </tr>
+                        <tr>
+                            <td>習熟度別回答</td>
+                            <td>―</td>
+                            <td>○</td>
+                            <td>○</td>
+                        </tr>
+                        <tr>
+                            <td>教材連携</td>
+                            <td>―</td>
+                            <td>―</td>
+                            <td>○</td>
+                        </tr>
+                        <tr>
+                            <td>アカウント管理</td>
+                            <td>―</td>
+                            <td>―</td>
+                            <td>一括管理可能</td>
+                        </tr>
+                        <tr>
+                            <td>カスタムコンテンツ</td>
+                            <td>―</td>
+                            <td>―</td>
+                            <td>○</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            -->
             <section class="case-studies">
                 <h2>導入事例</h2>
                 <div class="case-list">
