navを設定。他のタグも適切に変更したい

--- a/pricing-plans.html
+++ b/pricing-plans.html
@@ -704,7 +704,7 @@
                 </a>
             </div>
             
-            <div class="footer-column">
+            <nav class="footer-column">
                 <h3>製品</h3>
                 <ul class="footer-links">
                     <li><a href="/">機能</a></li>
@@ -712,9 +712,9 @@
                     <li><a href="/">アップデート情報</a></li>
                     <li><a href="/">ダウンロード</a></li>
                 </ul>
-            </div>
+            </nav>
 
-            <div class="footer-column">
+            <nav class="footer-column">
                 <h3>サポート</h3>
                 <ul class="footer-links">
                     <li><a href="/">ドキュメント</a></li>
@@ -722,9 +722,9 @@
                     <li><a href="/">よくある質問</a></li>
                     <li><a href="/">お問い合わせ</a></li>
                 </ul>
-            </div>
+            </nav>
 
-            <div class="footer-column">
+            <nav class="footer-column">
                 <h3>会社情報</h3>
                 <ul class="footer-links">
                     <li><a href="/">会社概要</a></li>
@@ -733,7 +733,7 @@
                     <li><a href="/">利用規約</a></li>
                     <li><a href="/">プライバシポリシー</a></li>
                 </ul>
-            </div>
+            </nav>
         </div>
     </footer>
 
