ロゴにRibeye Marrow(GoogleFonts)を採用

--- a/pricing-plans.html
+++ b/pricing-plans.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>料金プラン - MathCompass</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ribeye+Marrow&display=swap" rel="stylesheet">
     <style>
         /* 基本設定 */
         body {
@@ -25,10 +28,13 @@
 
         .logo {
             font-size: 20px;
-            font-weight: bold;
+            font-family: "Ribeye Marrow", serif;
+            font-weight: 400;
+            font-style: normal;
             text-decoration: none;
             color: #000;
         }
+
 
         .nav-menu {
             display: flex;
