--- a/pricing-footer.html
+++ b/pricing-footer.html
@@ -16,18 +16,38 @@
             padding: 20px 0;
         }
 
-        .footer-container {
+        #footer-container {
             display: flex;
-            justify-content: flex-start; /* 左寄せ */
-            gap: 20px; /* 列間の固定間隔 */
-            max-width: 600px;
+            justify-content: center;
+            gap: 60px;
             margin: 0 auto;
             padding: 0 20px; /* 左右の余白を追加 */
         }
 
+        .footer-logo-section {
+            text-align: left;
+        }
+
+        .footer-logo {
+            width: 120px;
+            height: auto;
+            margin-bottom: 10px;
+        }
+
+        .footer-logo-section .company-name {
+            margin: 0;
+        }
+
+        .footer-nav-section {
+            display: flex;
+            justify-content: flex-start; /* 左寄せ */
+            gap: 20px; /* 列間の固定間隔 */
+            max-width: 660px;
+        }
+
         .footer-column {
             flex: 1;
-            max-width: 300px;
+            min-width: 160px;
             text-align: left; /* 左揃え */
         }
 
@@ -56,50 +76,92 @@
             text-decoration: underline;
         }
 
-        @media (max-width: 365px) {
-            .footer-container {
+        .copyright {
+            text-align: center;
+            padding: 2em;
+            font-size: small;
+        }
+
+        @media (max-width: 768px) {
+            #footer-container {
                 flex-direction: column; /* 列を縦に並べる */
-                align-items: flex-start; /* 左寄せを維持 */
+                align-items: center;
+                gap: 20px;
+            }
+
+            .footer-logo-section {
+                text-align: center;
+            }
+        }
+
+        @media (max-width: 540px) {
+            .footer-column {
+                min-width: unset;
+            }
+        }
+
+        /* 365px以下: 全要素を縦並び */
+        @media (max-width: 365px) {
+            .footer-nav-section {
+                flex-direction: column;
+                align-items: flex-start;
             }
 
             .footer-column {
-                max-width: 100%;
+                flex: 1 1 100%;
+                max-width: none;
+                width: 100%; /* 各列を幅いっぱいに */
+            }
+
+            .footer-logo-section {
+                text-align: center; /* ロゴは中央揃え */
             }
         }
     </style>
 </head>
 <body>
     <footer>
-        <div class="footer-container">
-            <div class="footer-column">
-                <h3>製品</h3>
-                <ul>
-                    <li><a href="#">機能</a></li>
-                    <li><a href="#">料金プラン</a></li>
-                    <li><a href="#">アップデート情報</a></li>
-                    <li><a href="#">ダウンロード</a></li>
-                </ul>
+        <div id="footer-container">
+            <div class="footer-logo-section">
+                <a href="https://mimneko.github.io/note/" style="text-decoration: none; color: #333;">
+                    <img src="https://msp.c.yimg.jp/images/v2/FUTi93tXq405grZVGgDqG-xDq6NMUZA590viUSL7E1t9Dafn3bT2ssvzeTVSVhA8y4iZTldufLUyozbcCsSNUUvlsvJJ5n-bxkwDyfr7LXsHkfAtsZk9GQp2yv8RFLbbd0XRgvS1dkUzsTp1yDMALIBChlLTJjw6LO2QPrAUJkOmnhB4skm__wUKy4a7PA8XoPAu1aivy-X05EsU8j9_eN8Zon-Ne8oSL-VLLsltV7R4G7X2ukrH1zGMSybdMAkOlv4e0jKSmDfoqY4MwAX4sgzR-V0zRUTUHf8GRDQntdqDZNRaifXhNCs_BugWVA5o/2644-600x600.jpg" alt="MathCompass" class="footer-logo">
+                    <p class="company-name">MathCompass</p>
+                </a>
             </div>
-            <div class="footer-column">
-                <h3>サポート</h3>
-                <ul>
-                    <li><a href="#">ドキュメント</a></li>
-                    <li><a href="#">フォーラム</a></li>
-                    <li><a href="#">よくある質問</a></li>
-                    <li><a href="#">お問い合わせ</a></li>
-                </ul>
+
+            <div class="footer-nav-section">
+                <nav class="footer-column">
+                    <h3>製品</h3>
+                    <ul class="footer-links">
+                        <li><a href="#">機能</a></li>
+                        <li><a href="#">料金プラン</a></li>
+                        <li><a href="#">アップデート情報</a></li>
+                        <li><a href="#">ダウンロード</a></li>
+                    </ul>
+                </nav>
+                <nav class="footer-column">
+                    <h3>サポート</h3>
+                    <ul class="footer-links">
+                        <li><a href="#">ドキュメント</a></li>
+                        <li><a href="#">フォーラム</a></li>
+                        <li><a href="#">よくある質問</a></li>
+                        <li><a href="#">お問い合わせ</a></li>
+                    </ul>
+                </nav>
+                <nav class="footer-column">
+                    <h3>会社情報</h3>
+                    <ul class="footer-links">
+                        <li><a href="#">会社概要</a></li>
+                        <li><a href="#">ブログ</a></li>
+                        <li><a href="#">採用情報</a></li>
+                        <li><a href="#">利用規約</a></li>
+                        <li><a href="#">プライバシーポリシー</a></li>
+                    </ul>
+                </nav>
             </div>
-            <div class="footer-column">
-                <h3>会社情報</h3>
-                <ul>
-                    <li><a href="#">会社概要</a></li>
-                    <li><a href="#">ブログ</a></li>
-                    <li><a href="#">採用情報</a></li>
-                    <li><a href="#">利用規約</a></li>
-                    <li><a href="#">プライバシーポリシー</a></li>
-                </ul>
-            </div>
+
         </div>
+        <div class="copyright">© 2024 MathCompass. All Rights Reserved.</div>
     </footer>
 </body>
 </html>
