--- a/pricing-plans.html
+++ b/pricing-plans.html
@@ -30,11 +30,9 @@
             font-size: 20px;
             font-family: "Ribeye Marrow", serif;
             font-weight: 400;
-            font-style: normal;
             text-decoration: none;
             color: #000;
         }
-
 
         .nav-menu {
             display: flex;
@@ -283,20 +281,11 @@
             color: #666;
         }
 
-        @media (max-width: 768px) {
-            .case-item {
-                padding: 20px;
-            }
-
-            .card {
-                padding: 20px;
-            }
-        }
-
         /* フッター */
         footer {
             background-color: #f5f5f5;
             padding: 20px 0;
+            color: #333;
         }
 
         #footer-container {
@@ -352,29 +341,19 @@
 
         .footer-column a {
             text-decoration: none;
-            color: #333;
+            color: #666;
+            transition: color 0.3s;
         }
 
         .footer-column a:hover {
             text-decoration: underline;
+            color: #000;
         }
 
         .copyright {
             text-align: center;
             padding: 2em;
             font-size: small;
-        }
-
-        @media (max-width: 768px) {
-            #footer-container {
-                flex-direction: column;
-                align-items: center;
-                gap: 20px;
-            }
-
-            .footer-logo-section {
-                text-align: center;
-            }
         }
 
         @media (max-width: 540px) {
@@ -414,18 +393,24 @@
                 justify-content: center;
                 gap: 20px;
             }
+        }
 
-            .cards {
-                flex-direction: column;
-                align-items: center;
+        @media (max-width: 677px) {
+            .case-item {
+                padding: 20px;
             }
 
             .card {
+                padding: 20px;
                 width: 100%;
-                max-width: 240px;
             }
+        }
 
+        @media (max-width: 768px) {
             #footer-container {
+                flex-direction: column;
+                align-items: center;
+                gap: 20px;
                 grid-template-columns: 1fr;
                 text-align: center;
             }
@@ -495,9 +480,6 @@
 
             footer {
                 background-color: #2d2d2d;
-            }
-
-            .footer-column h3, .company-name {
                 color: #f5f5f5;
             }
         }
