--- a/scatter-plot-and-correlation-coefficient.html
+++ b/scatter-plot-and-correlation-coefficient.html
@@ -12,35 +12,63 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            flex-direction: column; /* 散布図の上に相関係数を表示するために変更 */
+        }
+        main {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+            max-width: calc(100vw - 30px);
         }
         .chart-container {
-            position: relative; /* スライダーを散布図の右に配置するために変更 */
-            max-width: 800px;
+            width: 100%;
+            margin: 20px 0; /* 散布図の上下に余白を設定 */
         }
         .slider-container {
-            position: absolute; /* スライダーを散布図の右に配置するために変更 */
-            right: -50px; /* 散布図の右に配置 */
-            top: 50%; /* 中央に配置 */
-            transform: translateY(-50%); /* 中央に配置 */
+            width: 100%; /* スライダーの幅を100%に設定 */
         }
         #correlationSlider {
-            -webkit-appearance: slider-vertical; /* WebKit */
-            width: 24px;
-            height: 500px;
-            padding: 0 5px;
+            width: 100%; /* スライダーの幅を100%に設定 */
+            height: 24px; /* スライダーの高さを24pxに設定 */
         }
     </style>
 </head>
 <body>
-    <h1>相関係数 r=<span id="correlationValue">0.0</span></h1> <!-- 散布図の上に相関係数を表示 -->
-    <div class="chart-container">
-        <canvas id="scatterChart" width="700" height="700"></canvas>
-        <div class="slider-container">
-            <input type="range" id="correlationSlider" min="-1" max="1" step="0.1" value="0" oninput="updateChart()">
+    <main>
+        <details>
+            <summary style="text-align: center;">相関係数</summary>
+            <div style="font-size: xx-large; text-align: center;">r=<span id="correlationValue">0.0</span></div>
+        </details>
+        <div class="chart-container">
+            <canvas id="scatterChart" width="700" height="700"></canvas>
         </div>
-    </div>
-    
+        <div class="slider-container">
+            <input type="range" id="correlationSlider" min="-1" max="1" step="0.1" value="0" oninput="updateChart()" list="my-datalist">
+            <datalist id="my-datalist">
+                <option value="-1.0"></option>
+                <option value="-0.9"></option>
+                <option value="-0.8"></option>
+                <option value="-0.7"></option>
+                <option value="-0.6"></option>
+                <option value="-0.5"></option>
+                <option value="-0.4"></option>
+                <option value="-0.3"></option>
+                <option value="-0.2"></option>
+                <option value="-0.1"></option>
+                <option value="0.0"></option>
+                <option value="0.1"></option>
+                <option value="0.2"></option>
+                <option value="0.3"></option>
+                <option value="0.4"></option>
+                <option value="0.5"></option>
+                <option value="0.6"></option>
+                <option value="0.7"></option>
+                <option value="0.8"></option>
+                <option value="0.9"></option>
+                <option value="1.0"></option>
+            </datalist>
+        </div>
+    </main>
     <script>
         function generateData(correlation) {
             const n = 100;
