--- a/scatter-plot-and-correlation-coefficient.html
+++ b/scatter-plot-and-correlation-coefficient.html
@@ -14,6 +14,7 @@
             align-items: center;
         }
         main {
+            padding: 30px;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -40,7 +41,7 @@
             <div style="font-size: xx-large; text-align: center;">r=<span id="correlationValue">0.0</span></div>
         </details>
         <div class="chart-container">
-            <canvas id="scatterChart" width="700" height="700"></canvas>
+            <canvas id="scatterChart" width="600" height="600"></canvas>
         </div>
         <div class="slider-container">
             <input type="range" id="correlationSlider" min="-1" max="1" step="0.1" value="0" oninput="updateChart()" list="my-datalist">
