拡張マイナースケールのON/OFFを切り替えた際にも、キーを探すボタンを押したときと同じように検索できるようにした。

--- a/key-finder.html
+++ b/key-finder.html
@@ -484,6 +484,7 @@
             let searchAllMinor = true;
             minorScaleToggle.addEventListener('change', function() {
                 searchAllMinor = this.checked;
+                findKeysBtn.click();
             });
 
             // 全ての音（同音異名を含む）を定義
