--- a/key-finder.html
+++ b/key-finder.html
@@ -300,6 +300,8 @@
             text-align: center;
             transition: var(--transition);
             border: 1px solid rgba(91, 120, 199, 0.1);
+            display: grid;
+            place-items: center;
         }
 
         .chord-type-item:hover {
