--- a/key-finder.html
+++ b/key-finder.html
@@ -180,7 +180,7 @@
             gap: 1.25rem;
         }
 
-        .chord-row {
+         {
             display: flex;
             flex-direction: column;
             gap: 0.5rem;
@@ -190,6 +190,7 @@
             .chord-row {
                 flex-direction: row;
                 align-items: flex-start;
+                place-items: center;
             }
         }
 
@@ -564,6 +565,7 @@
                 "+": [0, 4, 8], // オーギュメント・トライアド
                 "aug7": [0, 4, 8, 10], // オーギュメント7th
                 "+7": [0, 4, 8, 10], // オーギュメント7th
+                "M7#5": [0, 4, 8, 11], // メジャー7th（シャープ5）
                 "maj7#5": [0, 4, 8, 11], // メジャー7th（シャープ5）
                 
                 // サスペンデッド
